--- a/src/components/Cards/Cards.module.css
+++ b/src/components/Cards/Cards.module.css
@@ -5,11 +5,32 @@
     margin: 0 2% !important;
 }
 .infected{
-    border-bottom: 10px solid rgba(0, 0, 255, 0.5);
+    border-top: 10px solid rgb(248, 232, 12);
 }
 .recovered{
-    border-bottom: 10px solid rgba(0, 255, 0, 0.5);
+    border-top: 10px solid rgba(0, 255, 0, 0.5);
 }
 .deaths{
-    border-bottom: 10px solid rgba(255, 0, 0, 0.5);
+    border-top: 10px solid rgba(255, 0, 0, 0.5);
+}
+.typoInfected{
+    height: 12px;
+    width: 120px;
+    background-color: rgb(248, 232, 12);
+    margin-top: -20px !important;
+    margin-bottom: 10px !important;
+}
+.typoRecovered{
+    height: 12px;
+    width: 120px;
+    background-color: rgba(0, 255, 0, 0.5);
+    margin-top: -20px !important;
+    margin-bottom: 10px !important;
+}
+.typoDeaths{
+    height: 12px;
+    width: 120px;
+    background-color: rgba(255, 0, 0, 0.5);
+    margin-top: -19px !important;
+    margin-bottom: 10px !important;
 }
